# thrml-rs

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
crates/thrml-core/: Cargo.toml  README.md
crates/thrml-core/src/: backend.rs  block.rs  blockspec.rs  compute.rs  config.rs  distance.rs  interaction.rs  lib.rs  metrics.rs  node.rs  similarity.rs  spherical.rs  state_tree.rs  text.rs
crates/thrml-core/tests/: gpu_smoke_test.rs  test_block.rs  test_interaction.rs
crates/thrml-examples/: Cargo.toml  README.md
crates/thrml-examples/examples/: blt_sphere.rs  build_roots.rs  categorical_sampling.rs  full_api_walkthrough.rs  gaussian_bernoulli_ebm.rs  gaussian_pgm.rs  ising_chain.rs  navigator_demo.rs  spin_models.rs  train_mnist.rs  train_navigator.rs  tune_navigator.rs
crates/thrml-examples/src/: lib.rs
crates/thrml-kernels/: Cargo.toml  README.md
crates/thrml-kernels/benches/: kernel_fusion.rs
crates/thrml-kernels/src/: lib.rs
crates/thrml-kernels/src/autodiff/: gumbel_softmax.rs  mod.rs  ops.rs  sigmoid_bernoulli.rs
crates/thrml-kernels/src/batch_gather/: backward.rs  forward.rs  kernel.rs  mod.rs
crates/thrml-kernels/src/cosine_similarity/: forward.rs  kernel.rs  mod.rs
crates/thrml-kernels/src/gumbel_argmax/: backward.rs  forward.rs  kernel.rs  mod.rs
crates/thrml-kernels/src/l2_normalize/: forward.rs  kernel.rs  mod.rs
crates/thrml-kernels/src/sigmoid_bernoulli/: backward.rs  forward.rs  kernel.rs  mod.rs
crates/thrml-kernels/tests/: test_batch_gather_extended.rs
crates/thrml-models/: Cargo.toml  README.md
crates/thrml-models/src/: continuous_factors.rs  discrete_ebm.rs  ebm.rs  factor.rs  graph_ebm.rs  graph_utils.rs  ising.rs  lib.rs
crates/thrml-models/tests/: batch_gather_test.rs  discrete_ebm_batch_gather_test.rs  precision_routing_battle.rs  test_discrete_ebm.rs  test_factor.rs  test_ising.rs  test_train_mnist.rs  utils.rs
crates/thrml-observers/: Cargo.toml  README.md
crates/thrml-observers/src/: lib.rs  moment.rs  observer.rs  state_observer.rs
crates/thrml-samplers/: Cargo.toml  README.md
crates/thrml-samplers/src/: bernoulli.rs  gaussian.rs  langevin.rs  lib.rs  maxcut.rs  program.rs  rng.rs  sampler.rs  sampling.rs  schedule.rs  softmax.rs  spin_gibbs.rs
crates/thrml-samplers/tests/: precision_routing_battle.rs  test_program.rs
crates/thrml-sphere/: Cargo.toml  README.md
crates/thrml-sphere/docs/: BYTE_DIFFUSION_RESEARCH.md
crates/thrml-sphere/src/: compute.rs  config.rs  contrastive.rs  double_float.rs  energy_head.rs  evaluation.rs  hamiltonian.rs  harmonic_navigator.rs  hypergraph.rs  hypergraph_loader.rs  langevin.rs  lasing.rs  lib.rs  loader.rs  navigator.rs  roots.rs  similarity.rs  sphere_ebm.rs  spherical_harmonics.rs  training.rs
crates/thrml-sphere/tests/: advanced_features_test.rs  gauntlet_test.rs  graph_ebm_integration_test.rs  integration_test.rs  navigator_integration_test.rs
crates/thrml-viz/: Cargo.toml  README.md
crates/thrml-viz/examples/: visualize.rs
crates/thrml-viz/src/: app.rs  camera.rs  lib.rs  tree_export.rs  widgets.rs
crates/thrml-viz/src/monitor/: ipc.rs  loader.rs  mod.rs  notify.rs
crates/thrml-viz/src/renderer/: mod.rs  point_cloud.rs
crates/thrml-viz/src/shaders/: line.wgsl  point_cloud.wgsl
docs/: architecture.md  blt_sphere_pipeline.md  index.md
docs/api/: README.md  core.md  examples.md  kernels.md  models.md  observers.md  samplers.md  sphere.md
