[workspace]
members = [
    "crates/thrml-core",
    "crates/thrml-samplers",
    "crates/thrml-models",
    "crates/thrml-observers",
    "crates/thrml-kernels",
    "crates/thrml-examples",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["sashimisaketoro"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/sashimisaketoro/thrml-rs"
homepage = "https://github.com/sashimisaketoro/thrml-rs"
documentation = "https://docs.rs/thrml-rs"
readme = "README.md"
keywords = ["machine-learning", "probabilistic-graphical-models", "sampling", "gibbs", "gpu"]
categories = ["science", "simulation", "mathematics"]
rust-version = "1.89"

[workspace.dependencies]
# Burn with autotune (runtime kernel selection)
# Note: 'fusion' feature conflicts with custom fused-kernels, use one or the other
burn = { version = "0.19", default-features = false, features = ["autotune"] }
burn-tensor = { version = "0.19", default-features = false }
burn-wgpu = { version = "0.19", default-features = false, features = ["autotune"] }
burn-cuda = { version = "0.19", default-features = false, features = ["autotune"] }
burn-ndarray = { version = "0.19", default-features = false, features = ["std"] }
indexmap = { version = "2.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
rand_chacha = "0.3"
rand_distr = "0.4"
itertools = "0.12"
once_cell = "1.19"
clap = { version = "4.5", features = ["derive", "env"] }
directories = "5.0"

# ============================================================================
# Build Profiles - Reduce debug bloat
# ============================================================================

[profile.dev]
# Reduce debug info: 1 = line tables only (vs 2 = full DWARF)
# Cuts thrml_core from 500MB to ~100MB per build
debug = 1

[profile.dev.package."*"]
# Optimize dependencies even in dev (faster runtime, smaller binaries)
opt-level = 2
debug = false

[profile.test]
debug = 1

[profile.test.package."*"]
opt-level = 2
debug = false
