[package]
name = "thrml-core"
description = "Core types and GPU backend for the THRML probabilistic computing library"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/thrml-core"
readme = "README.md"
keywords = ["machine-learning", "probabilistic-graphical-models", "gpu", "tensor"]
categories = ["science", "simulation"]
rust-version.workspace = true

[dependencies]
burn = { workspace = true }
burn-tensor = { workspace = true }
burn-wgpu = { workspace = true, optional = true }
burn-cuda = { workspace = true, optional = true }
burn-ndarray = { workspace = true, optional = true }
burn-cubecl = { version = "0.19", default-features = false, optional = true }
indexmap = { workspace = true }
ordered-float = { version = "4.2", features = ["serde"] }
serde = { workspace = true }
toml = "0.8"
once_cell = { workspace = true }
clap = { workspace = true }
directories = { workspace = true }
num_cpus = "1.16"

[dev-dependencies]

# These are accessed via burn re-exports or feature flags
[package.metadata.cargo-machete]
ignored = ["burn-tensor", "burn-wgpu", "burn-cubecl", "burn-cuda", "burn-ndarray"]

[features]
default = ["gpu"]
# WGPU backend: Metal (macOS), Vulkan (Linux), DX12 (Windows)
# This is the primary backend used throughout the crate
gpu = ["burn/wgpu", "burn-wgpu", "burn-cubecl"]
# CUDA backend: NVIDIA GPUs on Linux/Windows  
# Includes WGPU for type compatibility
cuda = ["gpu", "burn/cuda", "burn-cuda"]
# CPU backend: Pure Rust via ndarray
# Includes WGPU for type compatibility, but CPU can be used as fallback
cpu = ["gpu", "burn/ndarray", "burn-ndarray"]
