[package]
name = "thrml-examples"
description = "Example programs demonstrating THRML probabilistic computing capabilities"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords = ["examples", "tutorial", "probabilistic", "sampling"]
categories = ["science"]
rust-version.workspace = true
publish = false  # Examples are not published to crates.io

[lib]
path = "src/lib.rs"

[[example]]
name = "ising_chain"
path = "examples/ising_chain.rs"

[[example]]
name = "spin_models"
path = "examples/spin_models.rs"

[[example]]
name = "categorical_sampling"
path = "examples/categorical_sampling.rs"

[[example]]
name = "full_api_walkthrough"
path = "examples/full_api_walkthrough.rs"

[[example]]
name = "train_mnist"
path = "examples/train_mnist.rs"

[[example]]
name = "gaussian_pgm"
path = "examples/gaussian_pgm.rs"

[[example]]
name = "gaussian_bernoulli_ebm"
path = "examples/gaussian_bernoulli_ebm.rs"

[[example]]
name = "blt_sphere"
path = "examples/blt_sphere.rs"

[dependencies]
thrml-core = { path = "../thrml-core", default-features = false }
thrml-samplers = { path = "../thrml-samplers" }
thrml-models = { path = "../thrml-models" }
thrml-sphere = { path = "../thrml-sphere" }
anyhow = "1.0"
burn = { version = "0.19", default-features = false }

# Visualization and graph libraries
plotters = { version = "0.3", features = ["bitmap_backend", "line_series", "svg_backend"] }
petgraph = "0.8"
indexmap = "2.6"

# Data loading
ndarray = "0.16"
ndarray-npy = "0.9"
rand = { workspace = true }

# CLI and configuration
clap = { workspace = true }

[features]
default = ["gpu"]
gpu = [
    "thrml-core/gpu",
    "thrml-samplers/gpu",
    "thrml-models/gpu",
    "thrml-sphere/gpu",
    "burn/wgpu",
]
fused-kernels = [
    "thrml-samplers/fused-kernels",
    "thrml-models/fused-kernels",
]

