[package]
name = "thrml-models"
description = "Model implementations for the THRML probabilistic computing library"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/thrml-models"
readme = "README.md"
keywords = ["ising", "boltzmann-machine", "ebm", "energy-based-models", "gpu"]
categories = ["science", "simulation", "mathematics"]
rust-version.workspace = true

[dependencies]
thrml-core = { path = "../thrml-core" }
thrml-samplers = { path = "../thrml-samplers" }
thrml-observers = { path = "../thrml-observers" }
thrml-kernels = { path = "../thrml-kernels", optional = true }
burn = { workspace = true }
burn-wgpu = { workspace = true, optional = true }
burn-cuda = { workspace = true, optional = true }
indexmap = { workspace = true }

[dev-dependencies]
itertools = { workspace = true }
ndarray = "0.16"
ndarray-npy = "0.9"
rand = { workspace = true }

# Accessed via burn re-exports or feature flags
[package.metadata.cargo-machete]
ignored = ["burn-wgpu", "burn-cuda"]

[features]
default = ["gpu"]
gpu = ["burn/wgpu", "burn-wgpu", "thrml-core/gpu", "thrml-samplers/gpu", "thrml-observers/gpu"]
cuda = ["gpu", "burn/cuda", "burn-cuda", "thrml-core/cuda", "thrml-samplers/cuda"]
fused-kernels = ["thrml-kernels", "thrml-kernels/gpu"]
