[package]
name = "thrml-observers"
description = "Observation utilities for the THRML probabilistic computing library"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/thrml-observers"
readme = "README.md"
keywords = ["statistics", "sampling", "moments", "observation"]
categories = ["science", "simulation"]
rust-version.workspace = true

[dependencies]
thrml-core = { path = "../thrml-core", default-features = false }
burn = { workspace = true }
burn-tensor = { workspace = true }
burn-wgpu = { workspace = true, optional = true }

[dev-dependencies]

# These are accessed via burn re-exports or feature flags
[package.metadata.cargo-machete]
ignored = ["burn-tensor", "burn-wgpu"]

[features]
default = ["gpu"]
gpu = ["burn/wgpu", "burn-wgpu", "thrml-core/gpu"]
