[package]
name = "thrml-sphere"
description = "Sphere optimization for placing embeddings on a hypersphere using Langevin dynamics"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/thrml-sphere"
readme = "README.md"
keywords = ["machine-learning", "sphere", "embedding", "optimization", "langevin"]
categories = ["science", "simulation", "mathematics"]
rust-version.workspace = true

[dependencies]
thrml-core = { path = "../thrml-core", default-features = false }
thrml-samplers = { path = "../thrml-samplers", default-features = false }
thrml-models = { path = "../thrml-models", default-features = false }
thrml-kernels = { path = "../thrml-kernels", default-features = false }
burn = { workspace = true }
burn-wgpu = { version = "0.19", default-features = false, features = ["autotune"], optional = true }
ndarray = "0.16"
ndarray-npy = "0.9"
safetensors = "0.4"
anyhow = "1.0"
ordered-float = "4.2"
bytemuck = "1.14"
num_cpus = "1.16"

[dev-dependencies]
rand = "0.8"
tempfile = "3.10"

[features]
default = ["gpu"]
gpu = ["burn/wgpu", "burn-wgpu", "thrml-core/gpu", "thrml-samplers/gpu", "thrml-models/gpu", "thrml-kernels/gpu"]


